--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.8.8",
-    "laravel-elixir": "^1.0.0"
+    "laravel-elixir": "^1.0.0",
+    "gulp-uglify": "~1.2.0",
+    "gulp-ext-replace": "~0.2.0",
+    "gulp-minify-css": "~1.1.0",
+    "gulp-sourcemaps": "~1.5.2"
   }
 }
